; ModuleID = '/home/carl/AnghaBench/linux/drivers/scsi/extr_xen-scsifront.c_scsifront_get_rqid.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/scsi/extr_xen-scsifront.c_scsifront_get_rqid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vscsifrnt_info = type { i32, i32 }

@VSCSIIF_MAX_REQS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.vscsifrnt_info*)* @scsifront_get_rqid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @scsifront_get_rqid(%struct.vscsifrnt_info* %0) #0 {
  %2 = alloca %struct.vscsifrnt_info*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  store %struct.vscsifrnt_info* %0, %struct.vscsifrnt_info** %2, align 8
  %5 = load %struct.vscsifrnt_info*, %struct.vscsifrnt_info** %2, align 8
  %6 = getelementptr inbounds %struct.vscsifrnt_info, %struct.vscsifrnt_info* %5, i32 0, i32 0
  %7 = load i64, i64* %3, align 8
  %8 = call i32 @spin_lock_irqsave(i32* %6, i64 %7)
  %9 = load %struct.vscsifrnt_info*, %struct.vscsifrnt_info** %2, align 8
  %10 = getelementptr inbounds %struct.vscsifrnt_info, %struct.vscsifrnt_info* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  %12 = load i32, i32* @VSCSIIF_MAX_REQS, align 4
  %13 = call i32 @find_first_bit(i32 %11, i32 %12)
  store i32 %13, i32* %4, align 4
  %14 = load i32, i32* %4, align 4
  %15 = load %struct.vscsifrnt_info*, %struct.vscsifrnt_info** %2, align 8
  %16 = getelementptr inbounds %struct.vscsifrnt_info, %struct.vscsifrnt_info* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @__clear_bit(i32 %14, i32 %17)
  %19 = load %struct.vscsifrnt_info*, %struct.vscsifrnt_info** %2, align 8
  %20 = getelementptr inbounds %struct.vscsifrnt_info, %struct.vscsifrnt_info* %19, i32 0, i32 0
  %21 = load i64, i64* %3, align 8
  %22 = call i32 @spin_unlock_irqrestore(i32* %20, i64 %21)
  %23 = load i32, i32* %4, align 4
  ret i32 %23
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @find_first_bit(i32, i32) #1

declare dso_local i32 @__clear_bit(i32, i32) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
